# silicon_demo_model

./: .alloy.json  2023.9.0  MANIFEST.in  PKG-INFO  README.md  __main__.py  index.rst  pyproject.toml  stats.json
api/nodes/: 00835dca  057fad52  0cfd415a  0f02297d  0fae0b32  113897ef  12543cc9  1320aaa3  13c3608d  13f8f94b  15043c27  160b41f8  18c661db  18edcf39  1e2ee717  1f3c835c  258edfe1  2a4e6875  2c25a12c  2d483be7  2dedbdfd  2f0a2612  30ad7ceb  315a31d4  3277bdc5  32d88557  3431da54  34db6f45  35a0c518  36ee538a  39a84c88  39caabff  3ae3da41  3cc4d1b8  3d3b0f66  4284726a  42a89be3  4aa6555d  4dee7c8c  4f20c649  (+109 more)
api/pipelines/: feature_report  live_inference
conf/base/: logging.yml
conf/base/catalog/: artifacts.yml  raw.yml
conf/base/parameters/: feature_factory.yml  feature_report.yml  impact.yml  modeling.yml  preprocessing.yml  recommend.yml  set_point_optimization.yml
docs/: build.sh  conf.py  requirements.txt
notebooks/: set_point_optimization.ipynb
src/: requirements.txt  requirements_2.txt  setup.py
src/feature_factory/: README.md  __init__.py  feature_factory.py  pydantic_models.py  sample_function.py  utils.py
src/feature_factory/data/: sample_preprocessed_data.csv
src/feature_factory/notebooks/: feature_factory.ipynb
src/feature_factory/tests/: conftest.py  test_feature_factory.py  test_pipeline.py  test_sample_function.py
src/modeling/: README.md  __init__.py  types.py  utils.py
src/modeling/api/: __init__.py  tag_dict.py
src/modeling/data/: sample_baselining_historical_data.csv  sample_baselining_recs_data.csv  sample_model_input_data.csv  sample_shap_explanation.pkl  sample_tag_dict.csv  sample_trained_model.pkl
src/modeling/datasets/: __init__.py  datasets.py  update_datasets.py
src/modeling/kedro_utils/: __init__.py  keras_model_dataset.py  mlflow_utils.py
src/modeling/models/: __init__.py  _cross_validation.py  metrics_utils.py  shap_utils.py
src/modeling/notebooks/: baselining.ipynb  generalized_additive_model.ipynb  model_base.ipynb  modeling.ipynb  modeling_gaussian_process.ipynb  performance_report.ipynb  splitter_base.ipynb
src/modeling/report/: __init__.py
src/modeling/sensitivity_analyser/: __init__.py  app.py  callbacks_registry.py  configs.py  grid.py  model_predictions.py
src/modeling/splitters/: __init__.py
src/optimizer/: README.md  __init__.py  diagnostics.py  types.py
src/optimizer/constraint/: constraint.py  handler.py  helpers.py  penalties.py  penalty.py  repair.py  sets.py  utils.py
src/optimizer/domain/: __init__.py  base.py  categorical.py  domain.py  integer.py  real.py  utils.py
src/optimizer/experimental/: robust_opt_utils.py
src/optimizer/loggers/: __init__.py  base.py  basic.py  best_trajectory.py  n_best.py  penalty.py
src/optimizer/plotting/: __init__.py  constraint.py  convergence.py  (+1 more)
src/optimus_core/: README.md  __init__.py  datasets.py  metrics.py  utils.py
src/preprocessing/: README.md  __init__.py  anomaly_detector.py  cleaning.py  configs.py  datasets.py  imputing.py  on_off_logic.py  resampling.py  utils.py
src/recommend/: README.md  __init__.py  functional.py  problem_factory.py  types.py  utils.py  warnings_catcher.py
src/reporting/: README.md  __init__.py  config.py  types.py
src/set_point_optimization/: README.md  __init__.py  datasets.py
src/set_point_optimization_kedro/: __init__.py  pipeline_registry.py  problem_factory.py  settings.py
(+411 files in other folders)
